--- a/app/src/main/res/layout/activity_barcode_scanner.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner.xml
@@ -6,11 +6,11 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="469dp"
+        android:layout_height="match_parent"
         android:layout_above="@+id/btnAction"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="214dp" />
+        android:layout_marginBottom="11dp" />
 
     <TextView
         android:id="@+id/txtBarcodeValue"
@@ -25,7 +25,8 @@
     <Button
         android:id="@+id/btnAction"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="128dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
         android:text="Gutschein validieren" />
 </RelativeLayout>
